fix: adjust spacing in heading gap

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -14,7 +14,7 @@ main {
   color: color.$grey-500;
   text-align: center;
   display: grid;
-  gap: size.$space-100;
+  gap: size.$space-150;
 
   &__text {
     @include type.preset(2);
